# dice-poker

./: .gitignore  Makefile  README.md  experiments.ipynb  game.html  index.html  notes.md  pyproject.toml
dice_poker/: board.py  color.py  dice.py  dice_patterns.py  game.py  runner.py  server.py  utils.py
static/: components.js  debug.html  debug.js  game.html  game.js  index.html  index.js  styles.css
tests/: test_board.py  test_dice.py  test_dice_patterns.py  test_game.py
