[tool.poetry]
name = "dice-poker"
version = "0.1.0"
description = "Code for simulating dice poker"
authors = ["lorenpike <noahceverett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
ipykernel = "^6.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[tool.poetry.scripts]
dice-poker = "dice_poker.runner:run" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
